samples/_failures_safe/1761652163_e3af1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0197896a.c: In function ‘main’:
./samples/SAFE/__tmp_0197896a.c:157:9: error: expected expression at end of input
  157 |         if (*(
      |         ^~
./samples/SAFE/__tmp_0197896a.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0197896a.c:157:9: error: expected declaration or statement at end of input
